--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,15 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+.history
+docker-compose.local.yml
+_proc/_quarto.yml
+_proc/.gitignore
+_proc/00_core.ipynb
+_proc/index.ipynb
+_proc/nbdev.yml
+_proc/styles.css
+_proc/_docs/index.html
+_proc/_docs/robots.txt
+_proc/_docs/sitemap.xml
